@@ -1,6 +1,10 @@
 SubVersion: $Id$
 
-- 25/06/2005, version 2.00:
+- 16/07/2005, version 2.00:
+	- [roms] $1583: fixed PPhD's bug (bno reload of ROM calls when upgrading)
+	- 
+
+- 25/06/2005, version 2.00-rc6:
 	- [roms] $1552: replaced my hand-made about box by the generic one provided with GTK 2.6
 	- [roms] $1560: TiEMu can be exited from the cross (WM)
 	- [roms] $1564: fixed 'backing pixmap problem' (bug #1227433): the scale factor
